--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -6,5 +6,7 @@
 
 @import "components/header";
 @import "components/image";
+@import "components/form";
 @import "components/buttons";
 @import "components/arrows";
+@import "components/youtube";
