--- a/resources/css/components/_image.scss
+++ b/resources/css/components/_image.scss
@@ -1,3 +1,3 @@
 .c-image__hover {
-    @apply aspect-square w-6/12 h-auto object-cover absolute;
+    @apply aspect-square w-6/12 h-auto object-cover absolute shadow-xl;
 }
