--- a/resources/css/components/_buttons.scss
+++ b/resources/css/components/_buttons.scss
@@ -9,7 +9,15 @@
         }
     }
 
+    &__black {
+        @apply text-white bg-black;
+
+        &:hover {
+            @apply bg-white text-black;
+        }
+    }
+
     &__large {
-        @apply px-10 py-3;
+        @apply md:px-10 px-4 md:py-3 py-2;
     }
 }
