--- a/resources/css/global.scss
+++ b/resources/css/global.scss
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: AllrounderMonument;
-    src: url("../../public/fonts/AllrounderMonument-Regular.otf");
+    font-family: Asap;
+    src: url("../../public/fonts/Asap-Regular.otf");
 }
 
 @font-face {
